--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </iframe>
 
     <div class="image-container">
-        <img src="https://i.imgur.com/pMAsqhP.png" class="image image1" alt="Zdjęcie 1">
+        <img src="https://i.imgur.com/rR52Z6x.png" class="image image1" alt="Zdjęcie 1">
         <img src="https://i.imgur.com/Jr6snoD.png" class="image image2" alt="Zdjęcie 2">
         <img src="https://i.imgur.com/iizpNCq.png" class="image image3" alt="Zdjęcie 3">
         <img src="https://i.imgur.com/fv3Y7RT.png" class="image image4" alt="Zdjęcie 4">
