--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
             line-height: 1.2;
         }
 
+        .thank-message {
+            color: #e70707;
+            font-size: 1.3em;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
         .orange-text {
             color: #FFA500;
             font-size: 1.3em;
@@ -117,6 +124,10 @@
                 font-size: 1.8em;
             }
 
+            .thank-message {
+                font-size: 1.1em;
+            }
+
             .orange-text {
                 font-size: 1.1em;
             }
@@ -148,6 +159,7 @@
 
     <div class="text-container">
         <h1>Halloweenowa Wyspa Wariata na TabMc.pl</h1>
+        <p class="thank-message">Dziękuję za 2 miejsce <33</p>
         <p class="orange-text">Cały eventowy warp powstał z ponad 120 tysięcy bloków!</p>
         <p class="orange-text">Wygraną w Evencie przeznacze w pewnym stopniu</p>
         <p class="orange-text">na wybrany cel charytatywny który sami wybierzecie!</p>
